Tue Aug 28 08:43:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/platform_aix_g++.GNU:
          Improved this file, thanks to Werner Buchert <w dot buchert at medat dot de>
          for testing these changes

Mon Aug 27 07:55:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/ace.mpc:
        * ace/ace_for_tao.mpc:
        * ace/Makefile.am:
          Added missing Select_Reactor.h, thanks to Vikram Karandikar
          <softking at gmail dot com> for reporting this

Sat Aug 25 12:57:30 UTC 2007  Steve Huston  <shuston@riverace.com>

        * bin/PerlACE/ProcessLVRT.pm: New class that integrates running a
          test on a LabVIEW RT Pharlap ETS target. This requires the Perl
          Net-Telnet.

        * bin/PerlACE/TestTarget.pm: The new TestTarget class is for test
          operations that are per-target, such as creating a local file path,
          deleting a file on the target, waiting for a file, creating a
          process, and getting the standard error log. In the default case,
          these all do the usual PerlACE functions currently in use. However,
          you can derive a class from this to do things differently. For
          example, on LabVIEW RT, creating a process really uses the
          ProcessLVRT module described above. Deleting a file uses FTP to
          delete it, etc.
          In this way, it's possible to customize the behaviors to a target
          without changing all the test scripts. The hitch is that the test
          script has to be changed once to instantiate the TestTarget object
          and then make method calls on it instead of calling PerlACE
          functions directly.

        * bin/TestTarget_LVRT.pm: Customization of TestTarget for LabVIEW RT.
          It requires the Net-Telnet Perl module to work. It's used when
          the TestTarget::create_target method is called and LabVIEW_RT is
          set in the test configuration.
