@@ -263,6 +263,9 @@ the made release. This is used by the integrated scoreboard on http://remedy.nl<
 <b>N.B.</b> You will not be able to post to the users' lists unless you are
 subscribed to them. Odds are you will not be able to post to the announce lists
 at all. Ask someone else (like Doug) to do this step.
+<li>When all cidlc builds are ready with the new version, login to naboo.dre.vanderbilt.edu
+as bczar and run <code>./cut-cidlc.sh version-number</code> fe <code>./cut-cidlc.sh 0.6.0</code>. If this
+script is not in its place, then the original is in the bin directory of the distribution.</li>
 </ol>
 </p>
 
